# gen-pilot

./: .gitignore  AGENT.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
paper/: Makefile  main.bbl  main.tex  references.bib
scripts/: calibrate_multipliers.py
spec/: TOOLS.md
src/gen_pilot/: __init__.py  server.py
src/gen_pilot/templates/: __init__.py  academic_report.meta.json  academic_report.tex.j2  data_table.html.j2  data_table.meta.json  meeting_notes.md.j2  meeting_notes.meta.json  technical_doc.md.j2  technical_doc.meta.json
src/gen_pilot/tools/: __init__.py  budget.py  planner.py  renderer.py
tests/: test_budget.py  test_planner.py  test_renderer.py  test_server_integration.py
