[project]
name = "gen-pilot"
version = "0.1.0"
description = "MCP server for context-aware generation planning and deferred document rendering for LLM coding agents"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Justice Owusu Agyemang", email = "jay@sperixlabs.org" },
]
keywords = ["mcp", "claude", "agents", "generation", "context-aware", "rendering", "templates"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
rw = [
    "resilient-write>=0.2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
gen-pilot = "gen_pilot.server:main"

[project.urls]
Homepage = "https://github.com/sperixlabs/gen-pilot"
Repository = "https://github.com/sperixlabs/gen-pilot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gen_pilot"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
